--- a/00_Clone-Wikipedia-Inicio/style.css
+++ b/00_Clone-Wikipedia-Inicio/style.css
@@ -19,7 +19,6 @@ body{
 }
 
 main{
-    width: auto;
     height: auto;
 }
 
@@ -48,6 +47,18 @@ header p{
 
 /*SECTION NAV*/
 
+.nav-container{
+    width: 100%;
+    background: url("./imagenes/00_fondo-wikipedia.png");
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.nav-container .nav{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
 .nav-list li h4{
     color:  var(--primary-color);
     font-size: var(--fontsize-big);
@@ -72,6 +83,15 @@ header p{
     justify-content: center;
     gap: 15px;
     font-size: 'arial';
+}
+
+.nav-list li{
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.nav-list li:hover h4{
+    color: rgb(0, 255, 0);
 }
 
 .nav-list li:nth-child(1){
@@ -132,38 +152,26 @@ header p{
     justify-self: center;
 }
 
-.nav .img-fondo{
-    grid-row: 2/span 3;
-    grid-column: 2/span3;
-    justify-self: center;
-    align-self: center;
-    width: 200px;
-    height: 200px;
-}
-
 /*SECTION LABEL*/
 
-.section-input-conteiner{
-    width: 450px;
-    margin: 20px auto 0 auto;
+.section-input-container{
+    max-width: 500px;
+    padding: 0 30px;
+    margin: 20px auto;
 }
 
-.section-input-conteiner .input-select-container{
-    width: auto;
+.section-input-container .input-select-container{
+    width: 100%;
+    margin: 0 auto;
     height: 45px;
 }
 
-.button-buscar img{
-    width: 20px;
-    height: 20px;
-}
-
-.section-input-conteiner .input-select-container{
+.section-input-container .input-select-container{
     display: flex;
     justify-content: center;
 }
 
-.section-input-conteiner .input-select-container div{
+.section-input-container .input-select-container div{
     height: 100%;
     width: 100%;
     border: 2px solid var(--secundary-color);
@@ -172,19 +180,33 @@ header p{
     align-items: center;
 }
 
-.section-input-conteiner .input-select-container div input{
+.section-input-container .input-select-container div input{
     width: 100%;
     height: 100%;
     border: none;
+    font-size: 16px;
+    padding: 0 15px;
 }
-.section-input-conteiner .input-select-container div select{
+
+.section-input-container .input-select-container div input:focus{
+    outline: none;
+}
+
+.section-input-container .input-select-container div select{
     width: 38px;
     height: auto;
     border: none;
 }
 
-.section-input-conteiner .input-select-container .button-buscar{
+.button-buscar img{
+    width: 20px;
+    height: 20px;
+}
+
+
+.section-input-container .input-select-container .button-buscar{
     background-color: var(--primary-color);
+    border: none;
     width: 70px;
     height: 100%;
     cursor: pointer;
@@ -194,8 +216,7 @@ header p{
 
  .section-button-inicio{
     width: 100%;
-    height: 40px;
-    margin: 30px 0 40px 0;
+    margin: 30px auto;
     display: flex;
     justify-content: center;
 } 
@@ -205,17 +226,20 @@ header p{
     grid-template-columns: 1fr auto 1fr;
     gap: 5px;
     align-items: center;
-    width: 40%;
+    max-width: 70%;
+}
 
+.section-button-inicio .button-container hr{
+    width: 70px;
 }
 
 .section-button-inicio .button-container .button-inicio{
-    width: 260px;
-    height: 100%;
-    justify-self: center;
+    width: 100%;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    column-gap: 10px;
     cursor: pointer;
     color: var(--primary-color);
     font-weight: bold;
@@ -229,14 +253,15 @@ header p{
     width: 100%;
     margin-top: 30px;
     display: grid;
-    grid-template-columns: 400px 1fr;
+    grid-template-columns: 40% 1fr;
 }
 
 .nav-wikipedia-list-container .list-nav{
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(5,100px);
+    grid-template-rows: repeat(5,auto);
+    gap: 10px;
     align-items: center;
 }
 
@@ -279,73 +304,76 @@ header p{
 
 /*Section download wikipedia*/
 
-.apps-wikipedia-container{
+.nav-wikipedia .apps-wikipedia-container{
+    height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 20px;
     font-size: 1.3rem;
     text-align: justify;
     line-height: 20px;
-    margin: 0 20px;
+    margin: 0 auto;
 }
 
-.fundation-container{
+.apps-wikipedia-container .fundation-container{
     display: flex;
     margin-bottom: 30px;
 }
 
-.fundation-container div{
+.apps-wikipedia-container .fundation-container div{
     margin-left: 10px;
 }
 
-.fundation-container div a{
+.apps-wikipedia-container .fundation-container div a{
     text-decoration: none;
 }
 
-.fundation-container div a:hover{
+.apps-wikipedia-container .fundation-container div a:hover{
     text-decoration: underline;
 }
 
-.fundation-container img{
+.apps-wikipedia-container .fundation-container img{
     width: 50px;
     height: 50px;
 }
 
-.download-container{
+
+.apps-wikipedia-container .download-container{
     display: flex;
     background-color: #efefef;
     padding: 10px;
 }
 
-.download-container div{
+.apps-wikipedia-container .download-container div{
     display: flex;
     flex-direction: column;
     margin-left: 15px;
 }
 
-.download-container div p{
+.apps-wikipedia-container .download-container div p{
     margin-top: 10px;
 }
 
-.download-container .icon-wikipedia{
+.apps-wikipedia-container .download-container .icon-wikipedia{
     width: 30px;
     height: 30px;
     justify-self: center;
     margin: 5px 5px 0 5px;
 }
 
-.download-container div a{
+.apps-wikipedia-container .download-container div a{
     width: auto;
     height: auto;
     margin-top: 10px;
 }
 
-.download-container .icon-playStore img{
+.apps-wikipedia-container .download-container .icon-playStore img{
     width: 110px;
     height: 50px;
 }
 
-.download-container .icon-appStore img{
+.apps-wikipedia-container .download-container .icon-appStore img{
     width: 100px;
     height: 50px;
 }
@@ -355,12 +383,13 @@ header p{
 
 .footer-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    gap: 10px;
     font-size: 1.3rem;
     margin: 10px 0;
+    padding: 0 20px;
     width: 100%;
-    height: 40px;
 }
 
 .footer-container a{
@@ -374,4 +403,56 @@ header p{
 
 .footer-container ul li{
     margin-right: 20px;
+}
+
+/* RESPONSIVE */
+@media (max-width:700px){
+
+    .nav-container{
+        padding: 0 20px;
+        background: none;
+
+    }
+
+    .nav-container .nav-list{
+        grid-template-columns: repeat(auto-fill,200px);
+    }
+
+    .nav-container .nav-list li{
+        grid-column: auto;
+        grid-row:auto;
+        gap: 10px;
+        justify-self: center;
+        font-size: 1.6rem;
+    }
+
+    .section-button-inicio .button-container{
+        grid-template-columns: 1fr;
+    }
+
+    .section-button-inicio hr{
+        display: none;
+    }
+
+    .section-button-inicio .button-inicio img{
+        display: none;
+    }
+
+    .nav-wikipedia{
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+    }
+
+    .nav-wikipedia-list-container {
+        padding: 0 20px;
+    }
+
+    .nav-wikipedia-list-container .list-nav{
+        grid-template-columns: repeat(auto-fill,200px);
+        place-content: center;
+    }
+
+    .footer-container{
+        flex-direction: column;
+    }
 }
